<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2014 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_lock"
        android:icon="@drawable/ic_action_lock"
        android:title="Lock"
        yourapp:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_key"
        android:icon="@drawable/ic_action_key"
        android:title="Key"
        yourapp:showAsAction="never"/>
    <item
        android:id="@+id/action_calendar"
        android:icon="@drawable/ic_action_calendar"
        android:title="Calendar"
        yourapp:showAsAction="never"/>

</menu>
