<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2014 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:title="Toolbar"
            android:background="?attr/colorAccent"/>
    <FrameLayout
            android:id="@+id/main_content_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp"
            android:background="@color/background_material_light"
            android:layout_below="@id/toolbar">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar_over_text"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:minHeight="?attr/actionBarSize"
                    android:background="?attr/colorPrimaryDark" />
            <TextView
                    android:id="@+id/toolbar_result"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:layout_marginTop="4dp"
                    android:text="@string/text_empty"
                    android:background="?attr/colorPrimary"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>
        </LinearLayout>

    </FrameLayout>
</LinearLayout>
